# d1pro

./: .gitignore  APRILTAG_TRACKING_INTEGRATION.md  REMAINING_PRS.md  Readme.md  start_ego_stack.sh  vnccommand
docs/: 00_overview.md  01_planning_math.md  02_control_math.md  03_planning_metrics.md  04_apriltag_integration.md  05_demo.md  06_ground_obstacle_modeling.md  ego_planner_d1_overview.md  todo.md
docs/assets/: generate_diagrams.py
install/: local_setup.sh  setup.sh
install/bspline_opt/include/bspline_opt/: bspline_optimizer.h  gradient_descent_optimizer.h  lbfgs.hpp  uniform_bspline.h
install/bspline_opt/share/bspline_opt/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/cmake_utils/share/cmake_utils/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/drone_detect/lib/drone_detect/: drone_detect
install/drone_detect/share/drone_detect/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/ego_planner/lib/ego_planner/: ego_planner_node  traj_server
install/ego_planner/share/ego_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/local_sensing/lib/local_sensing/: pcl_render_node
install/local_sensing/share/local_sensing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/map_generator/lib/map_generator/: random_forest
install/map_generator/share/map_generator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/mockamap/lib/mockamap/: mockamap_node
install/mockamap/share/mockamap/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/multi_map_server/lib/multi_map_server/: multi_map_visualization
install/multi_map_server/share/multi_map_server/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/odom_visualization/lib/odom_visualization/: odom_visualization
install/odom_visualization/share/odom_visualization/: local_setup.bash  local_setup.dsv  (+5 more)
log/: latest_build
scripts/: verify_odom_twist_frame.py
src/d1_planner_bridge/: CMakeLists.txt  package.xml
src/d1_planner_bridge/config/: d1_bridge.yaml
src/d1_planner_bridge/include/d1_planner_bridge/: d1_planner_bridge.hpp  trajectory_tracker.hpp
src/d1_planner_bridge/launch/: d1_planner_bridge.launch.py
src/d1_planner_bridge/src/: d1_planner_bridge_node.cpp  trajectory_tracker.cpp
src/perception/apriltag_detect/: package.xml  setup.cfg  setup.py
src/perception/apriltag_detect/apriltag_detect/: target_pose_node.py
src/perception/apriltag_detect/config/: tags.yaml  target_pose.yaml
src/perception/apriltag_detect/launch/: apriltag.launch.py
src/planner/bspline_opt/: CMakeLists.txt
src/planner/plan_env/: CMakeLists.txt
src/planner/plan_manage/: CMakeLists.txt
src/planner/traj_utils/: CMakeLists.txt
src/quadrotor_msgs/: CMakeLists.txt  package.xml
src/quadrotor_msgs/msg/: PositionCommand.msg
(+719 files in other folders)
