<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d1_planner_bridge</name>
  <version>0.0.1</version>
  <description>Bridge EGO-Planner pos_cmd to D1 /command/cmd_twist (linear.x, angular.z). Gait/mode switching is external.</description>
  <maintainer email="hyvonne@todo.todo">hyvonne</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ego_planner</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
